added a div nav1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+<!--header section-->
+<div id="nav"
+<a href="index.html"><img src="./images/img4.png" height="40px" width="40px"alt="logo"></a> <h1 class="logo">Bur<span class="logo-text">ger</span></h1>
+</div> 
     
 </body>
 </html>
