--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Burger_Palace</title>
 </head>
 <body>
 <!--header section-->
-<div id="nav"
+<div id="nav1">
 <a href="index.html"><img src="./images/img4.png" height="40px" width="40px"alt="logo"></a> <h1 class="logo">Bur<span class="logo-text">ger</span></h1>
 </div> 
+<div class="nav_tab1">
+    <ul>
+        <li><a href="index.html"></a>Home</li>
+        <li><a href="index.html"></a>Offers</li>
+        <li><a href="index.html"></a>Contact</li>
+        <li><a href="index.html"></a>About</li>
+        <li><a href="index.html"><img src="./images/img14.png" height="30" width="30"alt="cart"></li>
+    </ul>
+</div>
     
 </body>
 </html>
