--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 <!--header section-->
+<div class="nav">
 <div id="nav1">
-<a href="index.html"><img src="./images/img4.png" height="40px" width="40px"alt="logo"></a> <h1 class="logo">Bur<span class="logo-text">ger</span></h1>
-</div> 
+    <img src="./images/img4.png" height="40px" width="40px"alt="logo">
+<h1 class="logo">Bur<span class="logo-text">ger</span></h1>
+</div>
 <div class="nav_tab1">
     <ul>
         <li><a href="index.html"></a>Home</li>
@@ -20,6 +22,8 @@
         <li><a href="index.html"></a>About</li>
         <li><a href="index.html"><img src="./images/img14.png" height="30" width="30"alt="cart"></li>
     </ul>
+</div>
+
 </div>
     
 </body>
