added class About_us

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <!--header section-->
+<header>
 <div class="nav">
 <div id="nav1">
     <img src="./images/img4.png" height="40px" width="40px"alt="logo">
@@ -25,6 +26,17 @@
 </div>
 
 </div>
+<div id="About_us">
+    <div class="text-box">
+        <h1>Rain or shine,<br>its time to dine</h1>             
+        <p>We cook & deliver the tastiest burgers <br>right away to your designated location</p>
+        <button>Order now</button>
+    </div>
+    <div class="image1">
+        <img src="./images/img1.png">
+    </div>
+    </div>
+</header>
     
 </body>
 </html>
