added a section to html file named Exciting offers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 </div>
-<div id="About_us">
+<div class="About_us">
     <div class="text-box">
         <h1>Rain or shine,<br>its time to dine</h1>             
         <p>We cook & deliver the tastiest burgers <br>right away to your designated location</p>
@@ -37,6 +37,28 @@
     </div>
     </div>
 </header>
+<section class="Exciting_offers">
+    <div class="quality">
+        <img src="./images/Quality_burgers.png" alt="Quality Burgers">
+        <h2>Quality Burgers</h2>
+  <p>Lorem ipsam dolor sit amet,consectetur adpscing elit.Erat morbi viverra bibendum in sit.Ac semper arcu facilisis orrare</p>
+
+</div>
+<div class="Delivery">
+<img src="./images/Fast_delivery.png" alt="Fast Delivery">
+<h2>Fast Delivery</h2>
+<p>Lorem ipsam dolor sit amet,consectetur adpscing elit.Erat morbi viverra bibendum in sit.Ac semper arcu facilisis orrare</p>
+
+</div>
+<div class="delicious">
+<img src="./images/Delicious_meals.png" alt="Delicious Meals">
+<h2>Delicious Meals</h2>
+<p>Lorem ipsam dolor sit amet,consectetur adpscing elit.Erat morbi viverra bibendum in sit.Ac semper arcu facilisis orrare</p>
+
+</div>
+<div>
+</section>
+
     
 </body>
 </html>
