added a section Our_Menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 </header>
 <section class="Exciting_offers">
-    <div class="quality">
+    <div class="Quality">
         <img src="./images/Quality_burgers.png" alt="Quality Burgers">
         <h2>Quality Burgers</h2>
   <p>Lorem ipsam dolor sit amet,consectetur adpscing elit.Erat morbi viverra bibendum in sit.Ac semper arcu facilisis orrare</p>
@@ -50,15 +50,37 @@
 <p>Lorem ipsam dolor sit amet,consectetur adpscing elit.Erat morbi viverra bibendum in sit.Ac semper arcu facilisis orrare</p>
 
 </div>
-<div class="delicious">
+<div class="Delicious">
 <img src="./images/Delicious_meals.png" alt="Delicious Meals">
 <h2>Delicious Meals</h2>
 <p>Lorem ipsam dolor sit amet,consectetur adpscing elit.Erat morbi viverra bibendum in sit.Ac semper arcu facilisis orrare</p>
 
 </div>
 <div>
-</section>
+</section >
 
-    
+<section class="Our_Menu">
+<h1>Our <span class="menu-color">Menu</span></h1>
+<div class="row1">
+    <div class="container1">
+        <img src="./images/db1.png"  width=200px;
+        alt="burger">
+        <div>
+            <h2>DOUBLE BURGER</h2>
+             <p>Lorem ipsum dolor sit amet,con sectetur adipiscing elit. Erat mo rbi viverra bibendum in sit.Ac semper arcu facilis ornare</p>
+             <div class="justify">
+                 <div class="amount_in_shilings">
+                    <p>Ksh 200</p>
+                 </div>
+                 <div class="cart1">
+                    <p> <img src="./images/db2.png" height=30 alt=""></p>
+                 </div>
+             </div>    
+         </div>
+    </div>
+    </div>
+  
+
+ </section>   
 </body>
 </html>
