added div class row_2

--- a/index.html
+++ b/index.html
@@ -79,6 +79,50 @@
          </div>
     </div>
     </div>
+    <div class="container2">
+        <img src="./images/db3.png"  width=200px;
+         alt="burger">
+        <div>
+            <h2>DOUBLE BURGER</h2>
+            <p>Lorem ipsum dolor sit amet,con sectetur adipiscing elit. Erat mo rbi viverra bibendum in sit.Ac semper arcu facilis ornare</p>
+            <div class="justify">
+                <p class="amount_in_shillings"> Ksh 200</p>
+                <p class="cart2"><em> -  2  + </em></p>
+            </div>
+        </div>
+    </div>
+    <div class="container3">
+        <img src="./images/db4.png" width=200px; alt="burgers">
+        <div>
+            <h2>DOUBLE BURGER</h2>
+            <p>Lorem ipsum dolor sit amet,con sectetur adipiscing elit. Erat mo rbi viverra bibendum in sit.Ac semper arcu facilis ornare</p>
+            <div class="justify">
+                <div class="amount_in_shilings">
+                   <p>Ksh 200</p>
+                </div>
+                <div class="cart3">
+                   <p> <img src="./images/db5.png" height=30 alt=""></p>
+                </div>
+            </div>  
+        </div>
+    </div>
+    <div id="row_2">
+        <div class=" container3">
+            <img src="./images/db4.png"  width=200px; alt="burger">
+            <div>
+                <h2>DOUBLE BURGER</h2>
+                <p>Lorem ipsum dolor sit amet,con sectetur adipiscing elit. Erat mo rbi viverra bibendum in sit.Ac semper arcu facilis ornare</p>
+                <div class="justify">
+                    <div class="shilings">
+                       <p>Ksh 200</p>
+                    </div>
+                    <div class="cart">
+                       <p> <img src="./images/db6.jpg" height=30 alt=""></p>
+                    </div>
+                </div>    
+            </div>
+       </div>
+       </div>
   
 
  </section>   
