added a section Double_decker

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                     <p>Ksh 200</p>
                  </div>
                  <div class="cart1">
-                    <p> <img src="./images/db2.png" height=30 alt=""></p>
+                    <p> <img src="./images/img14.png" height=30 alt=""></p>
                  </div>
              </div>    
          </div>
     </div>
-    </div>
+    
     <div class="container2">
         <img src="./images/db3.png"  width=200px;
          alt="burger">
@@ -101,13 +101,14 @@
                    <p>Ksh 200</p>
                 </div>
                 <div class="cart3">
-                   <p> <img src="./images/db5.png" height=30 alt=""></p>
+                   <p> <img src="./images/img14.png" height=30 alt=""></p>
                 </div>
             </div>  
         </div>
     </div>
+</div>
     <div id="row_2">
-        <div class=" container3">
+        <div class=" container4">
             <img src="./images/db4.png"  width=200px; alt="burger">
             <div>
                 <h2>DOUBLE BURGER</h2>
@@ -116,15 +117,63 @@
                     <div class="shilings">
                        <p>Ksh 200</p>
                     </div>
-                    <div class="cart">
-                       <p> <img src="./images/db6.jpg" height=30 alt=""></p>
+                    <div class="cart4">
+                       <p> <img src="./images/img14.jpg" height=30 alt=""></p>
                     </div>
                 </div>    
             </div>
        </div>
-       </div>
-  
 
- </section>   
+
+   <div class=" container5">
+           <img src="./images/db5.png" width=200px; alt="burger">
+           <div class="container5">
+            <h2>DOUBLE BURGER</h2>
+                <p>Lorem ipsum dolor sit amet,con sectetur adipiscing elit. Erat mo rbi viverra bibendum in sit.Ac semper arcu facilis ornare</p>
+                <div class="justify">
+                    <div class="shilings">
+                       <p>Ksh 200</p>
+                    </div>
+                    <div class="cart5">
+                       <p> <img src="./images/img14.png" height=30 alt=""></p>
+                    </div>
+                </div>    
+            </div>
+        </div>
+        <div class="container6">
+            <img src="./images/db6.png"  width=200px; alt="burger">
+            <div>
+                <h2>DOUBLE BURGER</h2>
+                 <p>Lorem ipsum dolor sit amet,con sectetur adipiscing elit. Erat mo rbi viverra bibendum in sit.Ac semper arcu facilis ornare</p</p>
+                 <div class="justify">
+                    <div class="amount_in_shilings">
+                       <p>Ksh 200</p>
+                    </div>
+                    <div class="cart6">
+                       <p> <img src="./images/img14.png" height=30 alt=""></p>
+                    </div>
+                </div>     
+            </div>
+        </div>
+
+ </section>
+
+<section class="Double_decker">
+    <div class="images">
+        <div class="burger1">
+            <img src="./images/img2.png"  height="450px" width="500px"alt="">
+        </div>
+        <div class="burger2">
+            <img src="./images/img3.png" height="600px"alt="">
+        </div>
+    </div>
+    <div class="delish-text">
+        <div class="text">
+            <h1>The Double <br><span class="next">Decker</span></h1>
+            <p>Taste the explosion in your mouth</p>
+        </div>
+        </section>
+
+
 </body>
 </html>
