added a section To_download

--- a/index.html
+++ b/index.html
@@ -167,12 +167,28 @@
             <img src="./images/img3.png" height="600px"alt="">
         </div>
     </div>
-    <div class="delish-text">
+    <div class="images-text">
         <div class="text">
             <h1>The Double <br><span class="next">Decker</span></h1>
             <p>Taste the explosion in your mouth</p>
         </div>
         </section>
+        <section id="To_download">
+            <div> <h1><pre>Discover even more <br>with our mobile app</pre></h1></div>
+                   <div class= "add">
+                    <div>
+                        <img class="ad1"src="./images/img5.png" height ="500">
+                    </div>
+                    <div>
+                        <img class="ad2"src="./images/img6.png" height ="500"alt="">
+                    </div>
+                </div>
+        <div id= "apps">
+            <div><img src="./images/googleplay.png" width="85px" height="60px"alt="google play" ></div>
+            <div><img src="./images/appstore.png" width="85px" height="60px"alt="appstore"></div>
+        </div>
+        </section>
+
 
 
 </body>
