--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="index.html"></a>Offers</li>
         <li><a href="index.html"></a>Contact</li>
         <li><a href="index.html"></a>About</li>
-        <!-- <li><a href="index.html"><img src="images/img14.png" height="30" width="30"></li> -->
+        <li><a href="index.html"><img src="images/img14.png" height="30" width="30"></li> -->
     </ul>
 </div>
 
