added a logo image to the header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 <div class="nav">
  <div id="nav1">
-     <img src="/images/img4.png" height="40px" width="40px"alt="logo">
+     <img src="images/img4.png" height="40px" width="40px"alt="logo">
      <h1 class="logo">Bur<span class="logo-text">ger</span></h1>
  </div>
 <div class="nav_tab1">
